[tool.poetry]
name = "test"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
prometheus-fastapi-instrumentator = "^5.9.1"
pickleDB = "^0.9.2"
# alibi-detect = "^0.10.3"
numpy = "^1.23.4"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
bandit = "^1.7.4"
pycodestyle = "^2.9.1"
pep8 = "^1.7.1"
autopep8 = "^1.6.0"
pydocstyle = "^6.1.1"
pytest = "^7.1.2"
python-semantic-release = "^7.31.2"
commitizen = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
